Fixes #940: Pagination is going out of box in all the screens except laptop screen.

--- a/public/css/canonizer.css
+++ b/public/css/canonizer.css
@@ -2046,3 +2046,9 @@ a.verification-link:active {
   .tp-title {
       margin-top: unset !important;
   }
+  ul.pagination {
+    flex-wrap: wrap;
+  }
+  ul.pagination li{
+      margin-bottom: 0.25rem;
+  }
